# variable-lol

./: Cargo.toml
src/: main.rs
