[package]
name = "RustTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
druid = "0.8.3"
rsexp = "0.2.3"
num-complex = "0.4.0"
num-bigint = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8.5"
quote = "1.0"
proc-macro-hack = "0.5"
lazy_static = "1.4.0"